# ksuid-tcl

./: CMakeLists.txt  Makefile  pkgIndex.tcl.in  readme.md
examples/: example.tcl
src/: base62.cc  base62.h  custom_uint128.h  custom_unt128.cc  hex.cc  hex.h  library.cc  library.h
tests/: all.tcl  basic.test  hex.test
